[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/fonts/arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/combat/Combat.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Combat" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
color = Color( 0.282353, 0.282353, 0.282353, 1 )

[node name="ActionsBar" type="Control" parent="."]
margin_left = 648.0
margin_top = 24.0
margin_right = 1272.0
margin_bottom = 144.0

[node name="ColorRect" type="ColorRect" parent="ActionsBar"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.176471, 0.160784, 0.160784, 1 )

[node name="ActionsContainer" type="HBoxContainer" parent="ActionsBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 5
alignment = 1

[node name="ConfirmActionButton" type="Button" parent="."]
margin_left = 816.0
margin_top = 224.0
margin_right = 1104.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 1 )
text = "Confirm Action!"

[node name="TargetsSelected" type="Label" parent="."]
margin_left = 840.0
margin_top = 160.0
margin_right = 1080.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 2 )
text = "0/0 targets"
align = 1
valign = 1

[node name="Position1" type="Node2D" parent="."]
position = Vector2( 240, 288 )

[node name="Position2" type="Node2D" parent="."]
position = Vector2( 240, 600 )

[node name="Position3" type="Node2D" parent="."]
position = Vector2( 240, 912 )

[node name="Position4" type="Node2D" parent="."]
position = Vector2( 600, 288 )

[node name="Position5" type="Node2D" parent="."]
position = Vector2( 600, 600 )

[node name="Position6" type="Node2D" parent="."]
position = Vector2( 600, 912 )

[node name="Position7" type="Node2D" parent="."]
position = Vector2( 1680, 288 )

[node name="Position8" type="Node2D" parent="."]
position = Vector2( 1680, 600 )

[node name="Position9" type="Node2D" parent="."]
position = Vector2( 1680, 912 )

[node name="Position10" type="Node2D" parent="."]
position = Vector2( 1320, 288 )

[node name="Position11" type="Node2D" parent="."]
position = Vector2( 1320, 600 )

[node name="Position12" type="Node2D" parent="."]
position = Vector2( 1320, 912 )

[connection signal="pressed" from="ConfirmActionButton" to="." method="_on_ConfirmActionButton_pressed"]
